tests/integration/features/document_grammar/validation/08_grammar_reserved_statement_field_must_be_declared_REQUIRED_True/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: Grammar element 'REQUIREMENT's DESCRIPTION field must be declared as 'REQUIRED: True'.
CHECK: Location: {{.*}}input.sdoc:6:1
CHECK: Hint: A content field plays a key role in StrictDoc's HTML user interface as well as in the other export formats. It is a reserved field that any grammar element must have with 'REQUIRED: True'.
